[tool.poetry]
name = "jet_city_improv_contact_finder"
version = "0.9.0"
description = "A python script for Jet City Improv cast and crew members to find each other's contact info."
license = "MIT"
readme = "README.md"
authors = []
homepage = "https://github.com/thequicksort/JetCityImprovContactBuilder"
repository = "https://github.com/thequicksort/JetCityImprovContactBuilder"
documentation = "https://github.com/thequicksort/JetCityImprovContactBuilder"

keywords = ["packaging", "jet city improv", "spotify", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]
packages = [
    { include = "src" },
]

# Requirements
[tool.poetry.dependencies]
# The lack of version pinning here is really a nightmare for larger projects.
# Since this is small, we might be fine.
# python = ">=3.6"
# pytube = "^10.0"
# python-ffmpeg = "^1.0"
# youtube_search = "^2.0"
# eyed3 = "^0.9.0"
# requests = "^2.0"
beautifulsoup4 = "^4.0.0"
# PyQt5 = "^5.0"

[tool.poetry.dev-dependencies]
cx-freeze = {  version = "^6.0", python = "^3.6" }
black = "^20.8b1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = ''